--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.0.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/recharts": "^1.8.29",
+    "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
