--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@types/socket.io": "^3.0.1",
+    "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "cap": "^0.2.1",
     "cors": "^2.8.5",
