--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,52 @@
-backend/node_modules/
-backend/venv/
-frontend/node_modules/
-
-# Dependencies
+# Node
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-env/
+frontend/node_modules/
+backend/node_modules/
+
+# Python envs
+venv/
+.venv/
+**/venv/
+**/.venv/
+backend/venv/
+ENV/
+.envrc
+
+# Python artifacts
+__pycache__/
+**/__pycache__/
+*.py[cod]
+*.pyo
+.python-version
 
 # Environment variables
 .env
 .env.local
 .env.*.local
 
-# Build output
-dist/
+# Build output (project-wide)
 build/
+
+# Frontend build artifacts
+frontend/dist/
+frontend/out/
+frontend/release/
+
+# Backend build artifacts
+backend/dist/
+
+# Logs
+logs/
+*.log
+npm-debug.log
+yarn-debug.log
+yarn-error.log
 
 # IDE and editor files
 .idea/
 .vscode/
 *.swp
 *.swo
-
-# Logs
-logs/
-*.log
 
 # OS generated files
 .DS_Store
@@ -35,4 +55,4 @@ logs/
 .Spotlight-V100
 .Trashes
 ehthumbs.db
-Thumbs.db 
+Thumbs.db
