--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node --max-old-space-size=4096 dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "create-test-user": "ts-node src/scripts/createTestUser.ts",
